fix(ie-11-support): Ensure that places.js and the website can run on IE 11 (#707)
* fix(ie-11-support): ensure ie-11 is supported

* chore(ie-11-support): fix website scripts to support with IE11

* chore(ie-11-support): use older syntax to support IE11

* chore(ie-11-support): fix logo on IE11

--- a/docs/source/stylesheets/components/_navigation.scss
+++ b/docs/source/stylesheets/components/_navigation.scss
@@ -66,7 +66,8 @@
     .ac-logo__sm {
       position: relative;
       top: -2px;
-      width: 200px;
+      width: 210px;
+      height: 37px;
       margin-right: 6px;
       vertical-align: middle;
 
